Adapt tutorial notebook to changes in FluxPointEstimator

--- a/tutorials/cta_data_analysis.ipynb
+++ b/tutorials/cta_data_analysis.ipynb
@@ -442,11 +442,13 @@
    "source": [
     "ebounds = EnergyBounds.equal_log_spacing(1, 40, 4, unit=u.TeV)\n",
     "\n",
-    "seg = SpectrumEnergyGroupMaker(obs=stacked_obs)\n",
+    "seg = SpectrumEnergyGroupMaker(e_reco=stacked_obs.e_reco)\n",
     "seg.compute_groups_fixed(ebounds=ebounds)\n",
     "\n",
+    "dataset = stacked_obs.to_spectrum_dataset()\n",
+    "\n",
     "fpe = FluxPointEstimator(\n",
-    "    obs=stacked_obs, groups=seg.groups, model=fit.result[0].model\n",
+    "    datasets=[dataset], groups=seg.groups, model=fit.result[0].model\n",
     ")\n",
     "flux_points = fpe.run()\n",
     "flux_points.table_formatted"
