--- a/tutorials/pulsar_analysis.ipynb
+++ b/tutorials/pulsar_analysis.ipynb
@@ -488,11 +488,12 @@
    "outputs": [],
    "source": [
     "stacked_obs = extraction.spectrum_observations.stack()\n",
-    "seg = SpectrumEnergyGroupMaker(obs=stacked_obs)\n",
+    "seg = SpectrumEnergyGroupMaker(e_reco=stacked_obs.e_reco)\n",
     "\n",
     "seg.compute_groups_fixed(ebounds=ebounds)\n",
+    "dataset = stacked_obs.to_spectrum_dataset()\n",
     "fpe = FluxPointEstimator(\n",
-    "    obs=stacked_obs, groups=seg.groups, model=joint_result[0].model\n",
+    "    datasets=[dataset], groups=seg.groups, model=joint_result[0].model\n",
     ")\n",
     "flux_points = fpe.run()\n",
     "\n",
@@ -587,6 +588,13 @@
    "source": [
     "This tutorial suffers a bit from the lack of statistics: there were 9 Vela observations in the CTA DC1 while there is only one here. When done on the 9 observations, the spectral analysis is much better agreement between the input model and the gammapy fit."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
