--- a/tutorials/spectrum_analysis.ipynb
+++ b/tutorials/spectrum_analysis.ipynb
@@ -421,7 +421,7 @@
     "ebounds = np.logspace(np.log10(e_min), np.log10(e_max), 15) * u.TeV\n",
     "\n",
     "\n",
-    "seg = SpectrumEnergyGroupMaker(obs=stacked_obs)\n",
+    "seg = SpectrumEnergyGroupMaker(e_reco=stacked_obs.e_reco)\n",
     "seg.compute_groups_fixed(ebounds=ebounds)\n",
     "\n",
     "print(seg.groups)"
@@ -433,8 +433,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "dataset = stacked_obs.to_spectrum_dataset()\n",
+    "\n",
     "fpe = FluxPointEstimator(\n",
-    "    obs=stacked_obs, groups=seg.groups, model=joint_result[0].model\n",
+    "    datasets=[dataset], groups=seg.groups, model=joint_result[0].model\n",
     ")\n",
     "flux_points = fpe.run()"
    ]
@@ -564,6 +566,13 @@
    "source": [
     "# Start exercises here"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -582,7 +591,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.0"
+   "version": "3.7.0"
   }
  },
  "nbformat": 4,
