Remove SpectrumEnergyGroupMaker from notebooks

--- a/tutorials/cta_data_analysis.ipynb
+++ b/tutorials/cta_data_analysis.ipynb
@@ -63,7 +63,6 @@
     "    SpectrumFit,\n",
     "    SpectrumResult,\n",
     "    models,\n",
-    "    SpectrumEnergyGroupMaker,\n",
     "    FluxPointEstimator,\n",
     ")\n",
     "from gammapy.maps import Map, MapAxis, WcsNDMap, WcsGeom\n",
@@ -442,13 +441,10 @@
    "source": [
     "ebounds = EnergyBounds.equal_log_spacing(1, 40, 4, unit=u.TeV)\n",
     "\n",
-    "seg = SpectrumEnergyGroupMaker(e_reco=stacked_obs.e_reco)\n",
-    "seg.compute_groups_fixed(ebounds=ebounds)\n",
-    "\n",
     "dataset = stacked_obs.to_spectrum_dataset()\n",
     "\n",
     "fpe = FluxPointEstimator(\n",
-    "    datasets=[dataset], groups=seg.groups, model=fit.result[0].model\n",
+    "    datasets=[dataset], e_edges=ebounds, model=fit.result[0].model\n",
     ")\n",
     "flux_points = fpe.run()\n",
     "flux_points.table_formatted"
