--- a/tutorials/pulsar_analysis.ipynb
+++ b/tutorials/pulsar_analysis.ipynb
@@ -69,7 +69,6 @@
     "    SpectrumFit,\n",
     "    FluxPointEstimator,\n",
     "    SpectrumResult,\n",
-    "    SpectrumEnergyGroupMaker,\n",
     ")"
    ]
   },
@@ -488,12 +487,10 @@
    "outputs": [],
    "source": [
     "stacked_obs = extraction.spectrum_observations.stack()\n",
-    "seg = SpectrumEnergyGroupMaker(e_reco=stacked_obs.e_reco)\n",
-    "\n",
-    "seg.compute_groups_fixed(ebounds=ebounds)\n",
     "dataset = stacked_obs.to_spectrum_dataset()\n",
+    "\n",
     "fpe = FluxPointEstimator(\n",
-    "    datasets=[dataset], groups=seg.groups, model=joint_result[0].model\n",
+    "    datasets=[dataset], e_edges=ebounds, model=joint_result[0].model\n",
     ")\n",
     "flux_points = fpe.run()\n",
     "\n",
