--- a/tutorials/spectrum_analysis.ipynb
+++ b/tutorials/spectrum_analysis.ipynb
@@ -43,7 +43,6 @@
     "\n",
     "* [gammapy.spectrum.SpectrumResult](https://docs.gammapy.org/dev/api/gammapy.spectrum.SpectrumResult.html)\n",
     "* [gammapy.spectrum.FluxPoints](https://docs.gammapy.org/dev/api/gammapy.spectrum.FluxPoints.html)\n",
-    "* [gammapy.spectrum.SpectrumEnergyGroupMaker](https://docs.gammapy.org/dev/api/gammapy.spectrum.SpectrumEnergyGroupMaker.html)\n",
     "* [gammapy.spectrum.FluxPointEstimator](https://docs.gammapy.org/dev/api/gammapy.spectrum.FluxPointEstimator.html)\n",
     "\n",
     "Feedback welcome!"
@@ -115,7 +114,6 @@
     ")\n",
     "from gammapy.spectrum import (\n",
     "    FluxPoints,\n",
-    "    SpectrumEnergyGroupMaker,\n",
     "    FluxPointEstimator,\n",
     ")\n",
     "from gammapy.maps import Map"
@@ -418,13 +416,7 @@
     "stacked_obs = extraction.spectrum_observations.stack()\n",
     "\n",
     "e_min, e_max = stacked_obs.lo_threshold.to_value(\"TeV\"), 30\n",
-    "ebounds = np.logspace(np.log10(e_min), np.log10(e_max), 15) * u.TeV\n",
-    "\n",
-    "\n",
-    "seg = SpectrumEnergyGroupMaker(e_reco=stacked_obs.e_reco)\n",
-    "seg.compute_groups_fixed(ebounds=ebounds)\n",
-    "\n",
-    "print(seg.groups)"
+    "ebounds = np.logspace(np.log10(e_min), np.log10(e_max), 15) * u.TeV"
    ]
   },
   {
@@ -436,7 +428,7 @@
     "dataset = stacked_obs.to_spectrum_dataset()\n",
     "\n",
     "fpe = FluxPointEstimator(\n",
-    "    datasets=[dataset], groups=seg.groups, model=joint_result[0].model\n",
+    "    datasets=[dataset], e_edges=ebounds, model=joint_result[0].model\n",
     ")\n",
     "flux_points = fpe.run()"
    ]
