--- a/tutorials/cta_data_analysis.ipynb
+++ b/tutorials/cta_data_analysis.ipynb
@@ -61,9 +61,9 @@
     "from gammapy.spectrum import (\n",
     "    SpectrumExtraction,\n",
     "    SpectrumFit,\n",
-    "    SpectrumResult,\n",
     "    models,\n",
     "    FluxPointEstimator,\n",
+    "    FluxPointsDataset,\n",
     ")\n",
     "from gammapy.maps import Map, MapAxis, WcsNDMap, WcsGeom\n",
     "from gammapy.cube import MapMaker\n",
@@ -439,7 +439,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ebounds = EnergyBounds.equal_log_spacing(1, 40, 4, unit=u.TeV)\n",
+    "ebounds = EnergyBounds.equal_log_spacing(1, 40, 9, unit=u.TeV)\n",
     "\n",
     "dataset = stacked_obs.to_spectrum_dataset()\n",
     "\n",
@@ -466,13 +466,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "total_result = SpectrumResult(model=fit.result[0].model, points=flux_points)\n",
-    "\n",
-    "total_result.plot(\n",
-    "    energy_range=[1, 40] * u.TeV,\n",
-    "    fig_kwargs=dict(figsize=(8, 8)),\n",
-    "    point_kwargs=dict(color=\"green\"),\n",
-    ");"
+    "flux_points_dataset = FluxPointsDataset(\n",
+    "    data=flux_points, model=model\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.figure(figsize=(8, 6))\n",
+    "flux_points_dataset.peek()"
    ]
   },
   {
