--- a/tutorials/pulsar_analysis.ipynb
+++ b/tutorials/pulsar_analysis.ipynb
@@ -68,7 +68,7 @@
     "    SpectrumExtraction,\n",
     "    SpectrumFit,\n",
     "    FluxPointEstimator,\n",
-    "    SpectrumResult,\n",
+    "    FluxPointsDataset,\n",
     ")"
    ]
   },
@@ -499,8 +499,8 @@
     "    index=4.5, amplitude=amplitude_ref, reference=\"20 GeV\"\n",
     ")\n",
     "\n",
-    "spectrum_result = SpectrumResult(\n",
-    "    points=flux_points, model=joint_result[0].model\n",
+    "flux_points_dataset = FluxPointsDataset(\n",
+    "    data=flux_points, model=model\n",
     ")"
    ]
   },
@@ -508,8 +508,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now we can plot.\n",
-    "We present here two different spectra: one for the spectral flux and one for the spectral energy density."
+    "Now we can plot."
    ]
   },
   {
@@ -518,65 +517,22 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# First plot for the spectral flux\n",
-    "ax0, ax1 = spectrum_result.plot(\n",
-    "    energy_range=joint_fit.result[0].fit_range,\n",
-    "    fig_kwargs=dict(figsize=(8, 8)),\n",
-    "    point_kwargs=dict(label=\"Flux points\"),\n",
-    "    fit_kwargs=dict(label=\"Gammapy fit\"),\n",
-    ")\n",
+    "plt.figure(figsize=(8, 6))\n",
+    "ax_spectrum, ax_residual = flux_points_dataset.peek()\n",
     "\n",
-    "ax0.set_ylim([1e-14, 1e-7])\n",
-    "ax0.set_xlim([4e-2, 5e-1])\n",
-    "ax1.set_ylim([-1.7, 1.7])\n",
+    "ax_spectrum.set_ylim([1e-14, 3e-11])\n",
+    "ax_residual.set_ylim([-1.7, 1.7])\n",
     "\n",
     "spec_model_true.plot(\n",
-    "    ax=ax0,\n",
+    "    ax=ax_spectrum,\n",
     "    energy_range=joint_fit.result[0].fit_range,\n",
     "    label=\"Reference model\",\n",
     "    c=\"black\",\n",
     "    linestyle=\"dashed\",\n",
+    "    energy_power=2\n",
     ")\n",
     "\n",
-    "ax0.legend(loc=\"best\")\n",
-    "ax0.set_ylabel(r\"Flux [cm$^{-2}$ s$^1$ TeV$^{-1}$]\", size=14)\n",
-    "ax1.set_ylabel(\"Residuals\", size=14)\n",
-    "ax1.set_xlabel(\"Energy [TeV]\", size=14)\n",
-    "ax1.set_xticks([5e-2, 1e-1, 3e-1])\n",
-    "ax1.set_xticklabels([5e-2, 1e-1, 3e-1]);"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Second plot for the spectral energy flux\n",
-    "\n",
-    "ax0, ax1 = spectrum_result.plot(\n",
-    "    energy_range=joint_fit.result[0].fit_range,\n",
-    "    energy_power=2,\n",
-    "    flux_unit=\"erg-1 cm-2 s-1\",\n",
-    "    fig_kwargs=dict(figsize=(8, 8)),\n",
-    "    point_kwargs=dict(label=\"Flux points\"),\n",
-    "    fit_kwargs=dict(label=\"Gammapy fit\"),\n",
-    ")\n",
-    "\n",
-    "spec_model_true.plot(\n",
-    "    ax=ax0,\n",
-    "    energy_range=[4e-2, 5e-1] * u.TeV,\n",
-    "    energy_power=2,\n",
-    "    flux_unit=\"erg-1 cm-2 s-1\",\n",
-    "    label=\"Input model\",\n",
-    "    c=\"black\",\n",
-    "    linestyle=\"dashed\",\n",
-    ")\n",
-    "\n",
-    "ax0.set_ylim([5e-15, 5e-11])\n",
-    "ax0.set_xlim([4e-2, 5e-1])\n",
-    "ax1.set_ylim([-1.7, 1.7])\n",
-    "ax0.legend(loc=\"best\")"
+    "ax_spectrum.legend(loc=\"best\")"
    ]
   },
   {
@@ -585,13 +541,6 @@
    "source": [
     "This tutorial suffers a bit from the lack of statistics: there were 9 Vela observations in the CTA DC1 while there is only one here. When done on the 9 observations, the spectral analysis is much better agreement between the input model and the gammapy fit."
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
