--- a/tutorials/spectrum_analysis.ipynb
+++ b/tutorials/spectrum_analysis.ipynb
@@ -41,7 +41,6 @@
     "\n",
     "To compute flux points (a.k.a. \"SED\" = \"spectral energy distribution\")\n",
     "\n",
-    "* [gammapy.spectrum.SpectrumResult](https://docs.gammapy.org/dev/api/gammapy.spectrum.SpectrumResult.html)\n",
     "* [gammapy.spectrum.FluxPoints](https://docs.gammapy.org/dev/api/gammapy.spectrum.FluxPoints.html)\n",
     "* [gammapy.spectrum.FluxPointEstimator](https://docs.gammapy.org/dev/api/gammapy.spectrum.FluxPointEstimator.html)\n",
     "\n",
@@ -105,7 +104,6 @@
     "    SpectrumExtraction,\n",
     "    SpectrumObservation,\n",
     "    SpectrumFit,\n",
-    "    SpectrumResult,\n",
     ")\n",
     "from gammapy.spectrum.models import (\n",
     "    PowerLaw,\n",
@@ -115,6 +113,7 @@
     "from gammapy.spectrum import (\n",
     "    FluxPoints,\n",
     "    FluxPointEstimator,\n",
+    "    FluxPointsDataset,\n",
     ")\n",
     "from gammapy.maps import Map"
    ]
@@ -475,17 +474,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "spectrum_result = SpectrumResult(\n",
-    "    points=flux_points, model=joint_result[0].model\n",
-    ")\n",
-    "ax0, ax1 = spectrum_result.plot(\n",
-    "    energy_range=joint_fit.result[0].fit_range,\n",
-    "    energy_power=2,\n",
-    "    flux_unit=\"erg-1 cm-2 s-1\",\n",
-    "    fig_kwargs=dict(figsize=(8, 8)),\n",
-    ")\n",
-    "\n",
-    "ax0.set_xlim(0.4, 50)"
+    "flux_points_dataset = FluxPointsDataset(\n",
+    "    data=flux_points, model=model\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.figure(figsize=(8, 6))\n",
+    "flux_points_dataset.peek()"
    ]
   },
   {
