Fix spectrum_pipe notebook

--- a/tutorials/spectrum_pipe.ipynb
+++ b/tutorials/spectrum_pipe.ipynb
@@ -188,13 +188,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "plt.figure(figsize=(8, 6))\n",
     "opts = {\n",
     "    \"energy_range\": analysis.fit.fit_range,\n",
     "    \"energy_power\": 2,\n",
     "    \"flux_unit\": \"erg-1 cm-2 s-1\",\n",
     "}\n",
-    "axes = analysis.spectrum_result.plot(**opts)\n",
-    "CrabSpectrum().model.plot(ax=axes[0], **opts)"
+    "\n",
+    "ax_spectrum, ax_residual = analysis.spectrum_result.peek()\n",
+    "\n",
+    "CrabSpectrum().model.plot(ax=ax_spectrum, label=\"Crab reference\", **opts)\n",
+    "ax_spectrum.set_ylim(1e-12, 1e-10)\n",
+    "ax_spectrum.legend()"
    ]
   },
   {
@@ -237,7 +242,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.0"
+   "version": "3.7.0"
   }
  },
  "nbformat": 4,
