Clean up Jupyter notebooks with PyCharm static code analysis

--- a/tutorials/cta_data_analysis.ipynb
+++ b/tutorials/cta_data_analysis.ipynb
@@ -53,7 +53,7 @@
    "source": [
     "import numpy as np\n",
     "import astropy.units as u\n",
-    "from astropy.coordinates import SkyCoord, Angle\n",
+    "from astropy.coordinates import SkyCoord\n",
     "from astropy.convolution import Gaussian2DKernel\n",
     "from regions import CircleSkyRegion\n",
     "from gammapy.utils.energy import EnergyBounds\n",
@@ -65,7 +65,7 @@
     "    FluxPointEstimator,\n",
     "    FluxPointsDataset,\n",
     ")\n",
-    "from gammapy.maps import Map, MapAxis, WcsNDMap, WcsGeom\n",
+    "from gammapy.maps import MapAxis, WcsNDMap, WcsGeom\n",
     "from gammapy.cube import MapMaker\n",
     "from gammapy.background import ReflectedRegionsBackgroundEstimator\n",
     "from gammapy.detect import TSMapEstimator, find_peaks"
@@ -466,9 +466,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "flux_points_dataset = FluxPointsDataset(\n",
-    "    data=flux_points, model=model\n",
-    ")"
+    "flux_points_dataset = FluxPointsDataset(data=flux_points, model=model)"
    ]
   },
   {
@@ -514,7 +512,6 @@
     "\n",
     "* This notebook showed an example of a first CTA analysis with Gammapy, using simulated 1DC data.\n",
     "* This was part 2 for CTA 1DC turorial, the first part was here: [cta_1dc_introduction.ipynb](cta_1dc_introduction.ipynb)\n",
-    "* More tutorials (not 1DC or CTA specific) with Gammapy are [here](../index.ipynb)\n",
     "* Let us know if you have any question or issues!"
    ]
   }
