--- a/tutorials/fermi_lat.ipynb
+++ b/tutorials/fermi_lat.ipynb
@@ -56,15 +56,13 @@
     "import numpy as np\n",
     "from astropy import units as u\n",
     "from astropy.coordinates import SkyCoord\n",
-    "from astropy.table import Table\n",
-    "from astropy.visualization import simple_norm\n",
     "from gammapy.data import EventList\n",
     "from gammapy.irf import EnergyDependentTablePSF, EnergyDispersion\n",
     "from gammapy.maps import Map, MapAxis, WcsNDMap, WcsGeom\n",
-    "from gammapy.spectrum.models import TableModel, PowerLaw, ConstantModel\n",
+    "from gammapy.spectrum.models import TableModel, PowerLaw\n",
     "from gammapy.image.models import SkyPointSource, SkyDiffuseConstant\n",
     "from gammapy.cube.models import SkyModel, SkyDiffuseCube, BackgroundModel\n",
-    "from gammapy.cube import MapEvaluator, MapDataset, PSFKernel\n",
+    "from gammapy.cube import MapDataset, PSFKernel\n",
     "from gammapy.utils.fitting import Fit"
    ]
   },
