--- a/tutorials/first_steps.ipynb
+++ b/tutorials/first_steps.ipynb
@@ -106,8 +106,7 @@
    "source": [
     "import numpy as np\n",
     "import astropy.units as u\n",
-    "from astropy.coordinates import SkyCoord\n",
-    "from astropy.visualization import simple_norm"
+    "from astropy.coordinates import SkyCoord"
    ]
   },
   {
