--- a/tutorials/pulsar_analysis.ipynb
+++ b/tutorials/pulsar_analysis.ipynb
@@ -55,7 +55,7 @@
    "outputs": [],
    "source": [
     "from regions import CircleSkyRegion\n",
-    "from astropy.coordinates import SkyCoord, Angle\n",
+    "from astropy.coordinates import SkyCoord\n",
     "import astropy.units as u\n",
     "\n",
     "from gammapy.maps import Map, WcsGeom\n",
@@ -499,9 +499,7 @@
     "    index=4.5, amplitude=amplitude_ref, reference=\"20 GeV\"\n",
     ")\n",
     "\n",
-    "flux_points_dataset = FluxPointsDataset(\n",
-    "    data=flux_points, model=model\n",
-    ")"
+    "flux_points_dataset = FluxPointsDataset(data=flux_points, model=model)"
    ]
   },
   {
@@ -529,7 +527,7 @@
     "    label=\"Reference model\",\n",
     "    c=\"black\",\n",
     "    linestyle=\"dashed\",\n",
-    "    energy_power=2\n",
+    "    energy_power=2,\n",
     ")\n",
     "\n",
     "ax_spectrum.legend(loc=\"best\")"
