--- a/tutorials/simulate_3d.ipynb
+++ b/tutorials/simulate_3d.ipynb
@@ -38,12 +38,12 @@
    "source": [
     "import numpy as np\n",
     "import astropy.units as u\n",
-    "from astropy.coordinates import SkyCoord, Angle\n",
+    "from astropy.coordinates import Angle\n",
     "from gammapy.irf import load_cta_irfs\n",
-    "from gammapy.maps import WcsGeom, MapAxis, WcsNDMap, Map\n",
+    "from gammapy.maps import WcsGeom, MapAxis, WcsNDMap\n",
     "from gammapy.spectrum.models import PowerLaw\n",
     "from gammapy.image.models import SkyGaussian\n",
-    "from gammapy.cube.models import SkyModel, SkyModels, BackgroundModel\n",
+    "from gammapy.cube.models import SkyModel, BackgroundModel\n",
     "from gammapy.cube import MapDataset, PSFKernel\n",
     "from gammapy.cube import make_map_exposure_true_energy, make_map_background_irf\n",
     "from gammapy.utils.fitting import Fit\n",
