--- a/tutorials/spectrum_analysis.ipynb
+++ b/tutorials/spectrum_analysis.ipynb
@@ -96,25 +96,13 @@
     "from astropy.coordinates import SkyCoord, Angle\n",
     "from astropy.table import vstack as vstack_table\n",
     "from regions import CircleSkyRegion\n",
-    "from gammapy.data import DataStore, Observations\n",
+    "from gammapy.data import DataStore\n",
     "from gammapy.data import ObservationStats, ObservationSummary\n",
     "from gammapy.background.reflected import ReflectedRegionsBackgroundEstimator\n",
     "from gammapy.utils.energy import EnergyBounds\n",
-    "from gammapy.spectrum import (\n",
-    "    SpectrumExtraction,\n",
-    "    SpectrumObservation,\n",
-    "    SpectrumFit,\n",
-    ")\n",
-    "from gammapy.spectrum.models import (\n",
-    "    PowerLaw,\n",
-    "    ExponentialCutoffPowerLaw,\n",
-    "    LogParabola,\n",
-    ")\n",
-    "from gammapy.spectrum import (\n",
-    "    FluxPoints,\n",
-    "    FluxPointEstimator,\n",
-    "    FluxPointsDataset,\n",
-    ")\n",
+    "from gammapy.spectrum import SpectrumExtraction, SpectrumFit\n",
+    "from gammapy.spectrum.models import PowerLaw\n",
+    "from gammapy.spectrum import FluxPointEstimator, FluxPointsDataset\n",
     "from gammapy.maps import Map"
    ]
   },
@@ -474,9 +462,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "flux_points_dataset = FluxPointsDataset(\n",
-    "    data=flux_points, model=model\n",
-    ")"
+    "flux_points_dataset = FluxPointsDataset(data=flux_points, model=model)"
    ]
   },
   {
