--- a/tutorials/hess.ipynb
+++ b/tutorials/hess.ipynb
@@ -38,11 +38,11 @@
     "from astropy.convolution import Tophat2DKernel\n",
     "from regions import CircleSkyRegion\n",
     "from gammapy.data import DataStore\n",
-    "from gammapy.maps import Map, MapAxis, WcsGeom, WcsNDMap\n",
+    "from gammapy.maps import Map, MapAxis, WcsGeom\n",
     "from gammapy.cube import MapMaker, MapDataset, PSFKernel, MapMakerRing\n",
     "from gammapy.cube.models import SkyModel, BackgroundModel\n",
-    "from gammapy.spectrum.models import PowerLaw, ExponentialCutoffPowerLaw\n",
-    "from gammapy.image.models import SkyGaussian, SkyPointSource\n",
+    "from gammapy.spectrum.models import PowerLaw\n",
+    "from gammapy.image.models import SkyPointSource\n",
     "from gammapy.detect import compute_lima_on_off_image\n",
     "from gammapy.scripts import SpectrumAnalysisIACT\n",
     "from gammapy.utils.fitting import Fit\n",
