Remove tutorials/astropy_introduction.ipynb

--- a/tutorials/first_steps.ipynb
+++ b/tutorials/first_steps.ipynb
@@ -34,9 +34,7 @@
     "  * We will pick an example source and show how to plot its spectral model and flux points. For this we will use the following classes:\n",
     "    - [gammapy.spectrum.SpectralModel](https://docs.gammapy.org/dev/api/gammapy.spectrum.models.SpectralModel.html), specifically the [PowerLaw2](https://docs.gammapy.org/dev/api/gammapy.spectrum.models.PowerLaw2.html) model.\n",
     "    - [gammapy.spectrum.FluxPoints](https://docs.gammapy.org/dev/api/gammapy.spectrum.FluxPoints.html#gammapy.spectrum.FluxPoints)\n",
-    "    - [astropy.table.Table](http://docs.astropy.org/en/stable/api/astropy.table.Table.html#astropy.table.Table)\n",
-    "\n",
-    "If you're not yet familiar with the listed Astropy classes, maybe check out the [Astropy introduction for Gammapy users](astropy_introduction.ipynb) first."
+    "    - [astropy.table.Table](http://docs.astropy.org/en/stable/api/astropy.table.Table.html#astropy.table.Table)\n"
    ]
   },
   {
