Remove SpectrumFit from spectrum_analysis notebook

--- a/tutorials/spectrum_analysis.ipynb
+++ b/tutorials/spectrum_analysis.ipynb
@@ -34,7 +34,6 @@
     "\n",
     "For the global fit (using Sherpa and WSTAT in the background):\n",
     "\n",
-    "* [gammapy.spectrum.SpectrumFit](https://docs.gammapy.org/dev/api/gammapy.spectrum.SpectrumFit.html)\n",
     "* [gammapy.spectrum.models.PowerLaw](https://docs.gammapy.org/dev/api/gammapy.spectrum.models.PowerLaw.html)\n",
     "* [gammapy.spectrum.models.ExponentialCutoffPowerLaw](https://docs.gammapy.org/dev/api/gammapy.spectrum.models.ExponentialCutoffPowerLaw.html)\n",
     "* [gammapy.spectrum.models.LogParabola](https://docs.gammapy.org/dev/api/gammapy.spectrum.models.LogParabola.html)\n",
@@ -100,10 +99,11 @@
     "from gammapy.data import ObservationStats, ObservationSummary\n",
     "from gammapy.background.reflected import ReflectedRegionsBackgroundEstimator\n",
     "from gammapy.utils.energy import EnergyBounds\n",
-    "from gammapy.spectrum import SpectrumExtraction, SpectrumFit\n",
+    "from gammapy.spectrum import SpectrumExtraction\n",
     "from gammapy.spectrum.models import PowerLaw\n",
     "from gammapy.spectrum import FluxPointEstimator, FluxPointsDataset\n",
-    "from gammapy.maps import Map"
+    "from gammapy.maps import Map\n",
+    "from gammapy.utils.fitting import Fit"
    ]
   },
   {
@@ -185,7 +185,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
     "exclusion_region = CircleSkyRegion(\n",
@@ -200,7 +202,7 @@
     "\n",
     "mask = exclusion_mask.geom.region_mask([exclusion_region], inside=False)\n",
     "exclusion_mask.data = mask\n",
-    "exclusion_mask.plot()"
+    "exclusion_mask.plot();"
    ]
   },
   {
@@ -243,7 +245,7 @@
    "outputs": [],
    "source": [
     "plt.figure(figsize=(8, 8))\n",
-    "background_estimator.plot(add_legend=True)"
+    "background_estimator.plot(add_legend=True);"
    ]
   },
   {
@@ -273,7 +275,7 @@
     "\n",
     "obs_summary.plot_excess_vs_livetime(ax=ax1)\n",
     "ax2 = fig.add_subplot(122)\n",
-    "obs_summary.plot_significance_vs_livetime(ax=ax2)"
+    "obs_summary.plot_significance_vs_livetime(ax=ax2);"
    ]
   },
   {
@@ -368,9 +370,16 @@
     "    index=2, amplitude=2e-11 * u.Unit(\"cm-2 s-1 TeV-1\"), reference=1 * u.TeV\n",
     ")\n",
     "\n",
-    "joint_fit = SpectrumFit(obs_list=extraction.spectrum_observations, model=model)\n",
-    "joint_fit.run()\n",
-    "joint_result = joint_fit.result"
+    "datasets_joint = [obs.to_spectrum_dataset() for obs in extraction.spectrum_observations]\n",
+    "\n",
+    "for dataset in datasets_joint:\n",
+    "    dataset.model = model\n",
+    "\n",
+    "fit_joint = Fit(datasets_joint)\n",
+    "result_joint = fit_joint.run()\n",
+    "\n",
+    "# we make a copy here to compare it later\n",
+    "model_best_joint = model.copy()"
    ]
   },
   {
@@ -379,9 +388,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ax0, ax1 = joint_result[0].plot(figsize=(8, 8))\n",
-    "ax0.set_ylim(0, 20)\n",
-    "print(joint_result[0])"
+    "print(result_joint)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.figure(figsize=(8, 6))\n",
+    "ax_spectrum, ax_residual = datasets[0].peek()\n",
+    "ax_spectrum.set_ylim(0, 20)"
    ]
   },
   {
@@ -403,7 +421,7 @@
     "stacked_obs = extraction.spectrum_observations.stack()\n",
     "\n",
     "e_min, e_max = stacked_obs.lo_threshold.to_value(\"TeV\"), 30\n",
-    "ebounds = np.logspace(np.log10(e_min), np.log10(e_max), 15) * u.TeV"
+    "e_edges = np.logspace(np.log10(e_min), np.log10(e_max), 15) * u.TeV"
    ]
   },
   {
@@ -412,10 +430,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dataset = stacked_obs.to_spectrum_dataset()\n",
+    "dataset_stacked = stacked_obs.to_spectrum_dataset()\n",
     "\n",
     "fpe = FluxPointEstimator(\n",
-    "    datasets=[dataset], e_edges=ebounds, model=joint_result[0].model\n",
+    "    datasets=[dataset_stacked], e_edges=e_edges, model=model\n",
     ")\n",
     "flux_points = fpe.run()"
    ]
@@ -453,7 +471,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The final plot with the best fit model, flux points and residuals can be quickly made like this"
+    "The final plot with the best fit model, flux points and residuals can be quickly made like this: "
    ]
   },
   {
@@ -462,6 +480,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "model.parameters.covariance = result_joint.parameters.covariance\n",
     "flux_points_dataset = FluxPointsDataset(data=flux_points, model=model)"
    ]
   },
@@ -490,10 +509,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "stacked_obs = extraction.spectrum_observations.stack()\n",
+    "dataset_stacked.model = model\n",
+    "stacked_fit = Fit([dataset_stacked])\n",
+    "result_stacked = stacked_fit.run()\n",
     "\n",
-    "stacked_fit = SpectrumFit(obs_list=stacked_obs, model=model)\n",
-    "stacked_fit.run()"
+    "# make a copy to compare later\n",
+    "model_best_stacked = model.copy()"
    ]
   },
   {
@@ -502,8 +523,25 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "stacked_result = stacked_fit.result\n",
-    "print(stacked_result[0])"
+    "print(result_stacked)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model_best_joint.parameters.to_table()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model_best_stacked.parameters.to_table()"
    ]
   },
   {
