Fix spectral_analysis notebook

--- a/tutorials/spectrum_analysis.ipynb
+++ b/tutorials/spectrum_analysis.ipynb
@@ -398,7 +398,7 @@
    "outputs": [],
    "source": [
     "plt.figure(figsize=(8, 6))\n",
-    "ax_spectrum, ax_residual = datasets[0].peek()\n",
+    "ax_spectrum, ax_residual = datasets_joint[0].peek()\n",
     "ax_spectrum.set_ylim(0, 20)"
    ]
   },
@@ -460,6 +460,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "plt.figure(figsize=(8, 5))\n",
     "flux_points.table[\"is_ul\"] = flux_points.table[\"ts\"] < 4\n",
     "ax = flux_points.plot(\n",
     "    energy_power=2, flux_unit=\"erg-1 cm-2 s-1\", color=\"darkorange\"\n",
