Adapt spectrum_pipe tutorial

--- a/tutorials/spectrum_pipe.ipynb
+++ b/tutorials/spectrum_pipe.ipynb
@@ -96,7 +96,7 @@
     "    reference=1 * u.TeV,\n",
     ")\n",
     "\n",
-    "flux_point_binning = EnergyBounds.equal_log_spacing(0.7, 30, 5, u.TeV)"
+    "flux_point_binning = EnergyBounds.equal_log_spacing(0.77, 30, 5, u.TeV)"
    ]
   },
   {
@@ -136,7 +136,6 @@
     "    extraction=dict(containment_correction=False),\n",
     "    fit=dict(\n",
     "        model=model,\n",
-    "        stat=\"wstat\",\n",
     "        forward_folded=True,\n",
     "        fit_range=flux_point_binning[[0, -1]],\n",
     "    ),\n",
@@ -178,7 +177,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print(analysis.fit.result[0])"
+    "print(analysis.fit_result)"
    ]
   },
   {
@@ -189,7 +188,7 @@
    "source": [
     "plt.figure(figsize=(8, 6))\n",
     "opts = {\n",
-    "    \"energy_range\": analysis.fit.fit_range,\n",
+    "    \"energy_range\": config[\"fit\"][\"fit_range\"],\n",
     "    \"energy_power\": 2,\n",
     "    \"flux_unit\": \"erg-1 cm-2 s-1\",\n",
     "}\n",
