Remove SpectrumFit from tutorials

--- a/tutorials/cta_data_analysis.ipynb
+++ b/tutorials/cta_data_analysis.ipynb
@@ -57,10 +57,10 @@
     "from astropy.convolution import Gaussian2DKernel\n",
     "from regions import CircleSkyRegion\n",
     "from gammapy.utils.energy import EnergyBounds\n",
+    "from gammapy.utils.fitting import Fit\n",
     "from gammapy.data import DataStore\n",
     "from gammapy.spectrum import (\n",
     "    SpectrumExtraction,\n",
-    "    SpectrumFit,\n",
     "    models,\n",
     "    FluxPointEstimator,\n",
     "    FluxPointsDataset,\n",
@@ -385,8 +385,7 @@
     "extract = SpectrumExtraction(\n",
     "    observations=observations, bkg_estimate=bkg_estimate\n",
     ")\n",
-    "extract.run()\n",
-    "observations = extract.spectrum_observations"
+    "extract.run()"
    ]
   },
   {
@@ -408,9 +407,12 @@
     "model = models.PowerLaw(\n",
     "    index=2, amplitude=1e-11 * u.Unit(\"cm-2 s-1 TeV-1\"), reference=1 * u.TeV\n",
     ")\n",
-    "fit = SpectrumFit(observations, model)\n",
-    "fit.run()\n",
-    "print(fit.result[0])"
+    "\n",
+    "datasets = extract.spectrum_observations.to_spectrum_datasets(model=model)\n",
+    "\n",
+    "fit = Fit(datasets)\n",
+    "result = fit.run()\n",
+    "print(result)"
    ]
   },
   {
@@ -439,12 +441,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ebounds = EnergyBounds.equal_log_spacing(1, 40, 9, unit=u.TeV)\n",
+    "ebounds = EnergyBounds.equal_log_spacing(1, 40, 4, unit=u.TeV)\n",
     "\n",
     "dataset = stacked_obs.to_spectrum_dataset()\n",
     "\n",
     "fpe = FluxPointEstimator(\n",
-    "    datasets=[dataset], e_edges=ebounds, model=fit.result[0].model\n",
+    "    datasets=[dataset], e_edges=ebounds, model=model\n",
     ")\n",
     "flux_points = fpe.run()\n",
     "flux_points.table_formatted"
@@ -466,6 +468,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "model.parameters.covariance = result.parameters.covariance\n",
     "flux_points_dataset = FluxPointsDataset(data=flux_points, model=model)"
    ]
   },
@@ -476,7 +479,7 @@
    "outputs": [],
    "source": [
     "plt.figure(figsize=(8, 6))\n",
-    "flux_points_dataset.peek()"
+    "flux_points_dataset.peek();"
    ]
   },
   {
