--- a/tutorials/pulsar_analysis.ipynb
+++ b/tutorials/pulsar_analysis.ipynb
@@ -64,9 +64,9 @@
     "from gammapy.background import PhaseBackgroundEstimator\n",
     "from gammapy.spectrum.models import PowerLaw\n",
     "from gammapy.utils.energy import EnergyBounds\n",
+    "from gammapy.utils.fitting import Fit\n",
     "from gammapy.spectrum import (\n",
     "    SpectrumExtraction,\n",
-    "    SpectrumFit,\n",
     "    FluxPointEstimator,\n",
     "    FluxPointsDataset,\n",
     ")"
@@ -447,7 +447,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now we'll fit a model to the spectrum with SpectrumFit. First we load a power law model with an initial value for the index and the amplitude and then wo do a likelihood fit. The fit results are printed below."
+    "Now we'll fit a model to the spectrum with the `Fit` class. First we load a power law model with an initial value for the index and the amplitude and then wo do a likelihood fit. The fit results are printed below."
    ]
   },
   {
@@ -461,15 +461,13 @@
     ")\n",
     "\n",
     "fit_range = (0.04 * u.TeV, 0.4 * u.TeV)\n",
-    "ebounds = EnergyBounds.equal_log_spacing(0.04, 0.4, 7, u.TeV)\n",
+    "datasets = extraction.spectrum_observations.to_spectrum_datasets(model=model, fit_range=fit_range)\n",
     "\n",
-    "joint_fit = SpectrumFit(\n",
-    "    obs_list=extraction.spectrum_observations, model=model, fit_range=fit_range\n",
-    ")\n",
-    "joint_fit.run()\n",
-    "joint_result = joint_fit.result\n",
+    "joint_fit = Fit(datasets)\n",
+    "joint_result = joint_fit.run()\n",
     "\n",
-    "print(joint_result[0])"
+    "model.parameters.covariance = joint_result.parameters.covariance\n",
+    "print(joint_result)"
    ]
   },
   {
@@ -486,13 +484,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "ebounds = EnergyBounds.equal_log_spacing(0.04, 0.4, 7, u.TeV)\n",
+    "\n",
     "stacked_obs = extraction.spectrum_observations.stack()\n",
     "dataset = stacked_obs.to_spectrum_dataset()\n",
     "\n",
     "fpe = FluxPointEstimator(\n",
-    "    datasets=[dataset], e_edges=ebounds, model=joint_result[0].model\n",
+    "    datasets=[dataset], e_edges=ebounds, model=model\n",
     ")\n",
+    "\n",
     "flux_points = fpe.run()\n",
+    "flux_points.table[\"is_ul\"] = flux_points.table[\"ts\"] < 1\n",
     "\n",
     "amplitude_ref = 0.57 * 19.4e-14 * u.Unit(\"1 / (cm2 s MeV)\")\n",
     "spec_model_true = PowerLaw(\n",
@@ -523,7 +525,7 @@
     "\n",
     "spec_model_true.plot(\n",
     "    ax=ax_spectrum,\n",
-    "    energy_range=joint_fit.result[0].fit_range,\n",
+    "    energy_range=fit_range,\n",
     "    label=\"Reference model\",\n",
     "    c=\"black\",\n",
     "    linestyle=\"dashed\",\n",
