--- a/tutorials/spectrum_simulation.ipynb
+++ b/tutorials/spectrum_simulation.ipynb
@@ -23,7 +23,6 @@
     "* [gammapy.irf.EnergyDispersion](https://docs.gammapy.org/dev/api/gammapy.irf.EnergyDispersion)\n",
     "* [gammapy.spectrum.SpectrumObservation](https://docs.gammapy.org/dev/api/gammapy.spectrum.SpectrumObservation.html)\n",
     "* [gammapy.spectrum.SpectrumSimulation](https://docs.gammapy.org/dev/api/gammapy.spectrum.SpectrumSimulation.html)\n",
-    "* [gammapy.spectrum.SpectrumFit](https://docs.gammapy.org/dev/api/gammapy.spectrum.SpectrumFit.html)\n",
     "* [gammapy.spectrum.models.PowerLaw](https://docs.gammapy.org/dev/api/gammapy.spectrum.models.PowerLaw.html)"
    ]
   },
@@ -55,8 +54,9 @@
     "import numpy as np\n",
     "import astropy.units as u\n",
     "from gammapy.irf import EnergyDispersion, EffectiveAreaTable\n",
-    "from gammapy.spectrum import SpectrumSimulation, SpectrumFit\n",
-    "from gammapy.spectrum.models import PowerLaw"
+    "from gammapy.spectrum import SpectrumSimulation\n",
+    "from gammapy.spectrum.models import PowerLaw\n",
+    "from gammapy.utils.fitting import Fit"
    ]
   },
   {
@@ -128,10 +128,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "fit = SpectrumFit(obs_list=sim.obs, model=pwl.copy(), stat=\"cash\")\n",
-    "fit.fit_range = [1, 10] * u.TeV\n",
-    "fit.run()\n",
-    "print(fit.result[0])"
+    "dataset = sim.obs.to_spectrum_dataset(model=pwl.copy())\n",
+    "\n",
+    "fit = Fit([dataset])\n",
+    "\n",
+    "result = fit.run()\n",
+    "print(result)"
    ]
   },
   {
@@ -213,12 +215,13 @@
     "%%time\n",
     "results = []\n",
     "for obs in sim.result:\n",
-    "    fit = SpectrumFit(obs, pwl.copy(), stat=\"wstat\")\n",
-    "    fit.optimize()\n",
+    "    dataset = obs.to_spectrum_dataset(model=pwl.copy())\n",
+    "    fit = Fit([dataset])\n",
+    "    result = fit.optimize()\n",
     "    results.append(\n",
     "        {\n",
-    "            \"index\": fit.result[0].model.parameters[\"index\"].value,\n",
-    "            \"amplitude\": fit.result[0].model.parameters[\"amplitude\"].value,\n",
+    "            \"index\": result.parameters[\"index\"].value,\n",
+    "            \"amplitude\": result.parameters[\"amplitude\"].value,\n",
     "        }\n",
     "    )"
    ]
@@ -270,7 +273,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.0"
+   "version": "3.7.0"
   }
  },
  "nbformat": 4,
