--- a/tutorials/spectrum_simulation_cta.ipynb
+++ b/tutorials/spectrum_simulation_cta.ipynb
@@ -12,7 +12,6 @@
     "\n",
     "* [gammapy.spectrum.SpectrumObservation](https://docs.gammapy.org/dev/api/gammapy.spectrum.SpectrumObservation.html)\n",
     "* [gammapy.spectrum.SpectrumSimulation](https://docs.gammapy.org/dev/api/gammapy.spectrum.SpectrumSimulation.html)\n",
-    "* [gammapy.spectrum.SpectrumFit](https://docs.gammapy.org/dev/api/gammapy.spectrum.SpectrumFit.html)\n",
     "* [gammapy.irf.load_cta_irfs](https://docs.gammapy.org/dev/api/gammapy.irf.load_cta_irfs.html)"
    ]
   },
@@ -41,7 +40,8 @@
    "source": [
     "import numpy as np\n",
     "import astropy.units as u\n",
-    "from gammapy.spectrum import SpectrumSimulation, SpectrumFit\n",
+    "from gammapy.spectrum import SpectrumSimulation\n",
+    "from gammapy.utils.fitting import Fit\n",
     "from gammapy.spectrum.models import PowerLaw\n",
     "from gammapy.irf import load_cta_irfs"
    ]
@@ -73,7 +73,7 @@
    "outputs": [],
    "source": [
     "# Define spectral model\n",
-    "model = PowerLaw(\n",
+    "model_ref = PowerLaw(\n",
     "    index=2.1,\n",
     "    amplitude=2.5e-12 * u.Unit(\"cm-2 s-1 TeV-1\"),\n",
     "    reference=1 * u.TeV,\n",
@@ -126,7 +126,7 @@
    "source": [
     "# Simulate data\n",
     "sim = SpectrumSimulation(\n",
-    "    aeff=aeff, edisp=edisp, source_model=model, livetime=livetime\n",
+    "    aeff=aeff, edisp=edisp, source_model=model_ref, livetime=livetime\n",
     ")\n",
     "sim.simulate_obs(seed=42, obs_id=0)"
    ]
@@ -157,9 +157,11 @@
    "outputs": [],
    "source": [
     "# Fit data\n",
-    "fit = SpectrumFit(obs_list=sim.obs, model=model, stat=\"cash\")\n",
-    "fit.run()\n",
-    "result = fit.result[0]"
+    "model = model_ref.copy()\n",
+    "dataset = sim.obs.to_spectrum_dataset(model=model)\n",
+    "\n",
+    "fit = Fit([dataset])\n",
+    "result = fit.run()"
    ]
   },
   {
@@ -178,9 +180,11 @@
    "outputs": [],
    "source": [
     "energy_range = [0.1, 100] * u.TeV\n",
+    "model_ref.plot(energy_range=energy_range, energy_power=2)\n",
+    "\n",
+    "model.parameters.covariance = result.parameters.covariance\n",
     "model.plot(energy_range=energy_range, energy_power=2)\n",
-    "result.model.plot(energy_range=energy_range, energy_power=2)\n",
-    "result.model.plot_error(energy_range=energy_range, energy_power=2);"
+    "model.plot_error(energy_range=energy_range, energy_power=2);"
    ]
   },
   {
@@ -230,7 +234,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.0"
+   "version": "3.7.0"
   }
  },
  "nbformat": 4,
